[package]
name = "esp32-c3-bkm01-bsc"
version = "0.1.0"
authors = ["Ian Graham"]
edition = "2021"

[features]
default = ["experimental"]
experimental = ["esp-idf-svc/experimental", "embedded-svc/experimental"]

[dependencies]
rgb = "0.8"
log = "0.4"
anyhow = { version = "1.0", features = ["backtrace"] }
esp32c3 = "0.8"
esp-idf-sys = "0.31.11"
esp-idf-svc = "0.43.4"
esp-idf-hal = "0.39.3"
embedded-svc = "0.23"
